<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poll Watcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose">Choose</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="goBack">Go Back</string>
    <string name="uname">User Name</string>
    <string name="oldpasswd">Old Password</string>
    <string name="passwd">Password</string>
    <string name="passwd2">Repeat Password</string>
    <string name="fname">First Name</string>
    <string name="mi">Middle Initial</string>
    <string name="lname">Last Name</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="bday">Birthday</string>
    <string name="takeAdPic">Take Ad Picture</string>
    <string name="takeOdoPic">Take Odometer Picture</string>
    <string name="adPic">Ad Picture</string>
    <string name="odoPic">Odometer Picture</string>
    <string name="odoText">Odometer Text</string>
    <string name="viewPreviousUpdate">View Previous Update</string>
    <string name="editProfile">Edit Profile</string>
    <string name="editPassword">Edit Password</string>
    <string name="takePicture">Take Picture</string>
    <string name="savePicture">Save Picture</string>
    <string name="registerVehicle">Add new vehicle</string>
    <string name="plateNo">Plate No.</string>
    <string name="name">Name</string>
    <string name="pickavehicle">Registered vehicles:</string>
    <string name="rememberme">Remember me</string>
    <string name="sendUpdate">Send Update</string>
    <string name="save">Save</string>
    <string name="saveAndExit">Save and Exit</string>
    <string name="title_activity_user">User </string>
    <string name="title_activity_users">Users </string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_record">Record </string>
    <string name="title_activity_records">Records </string>
    <string name="title_activity_log">Log </string>
    <string name="title_activity_logs">Logs </string>
    <string name="title_activity_server_setting">ServerSetting</string>
    <string name="title_activity_registration">Poll Watcher Registration</string>
    <string name="title_activity_region_list">Choose a Region</string>
    <string name="title_activity_lgu_list">Choose a City / Province</string>
    <string name="title_activity_login">Poll Watcher Login</string>
    <string name="crud_create">Create</string>
    <string name="crud_save">Save</string>
    <string name="crud_delete">Delete</string>
    <string name="crud_edit">Edit</string>
    <string name="crud_back">Back</string>
    <string name="crud_cancel">Cancel</string>
    <string name="crud_add_new">Add New</string>
    <string name="crud_save_and_add_new">Save and Add New</string>
    <string name="location_and_description_please">Please indicate location and description</string>

    <!--
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_choose_user">Choose a User</string>
    <string name="title_activity_choose_vehicle">Choose a Vehicle</string>
    <string name="title_activity_view_updates">View Previous Update</string>
    <string name="title_activity_edit_profile">Edit Your Profile</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_vehicle_dashboard">Vehicle Dashboard</string>
    <string name="title_activity_vehicle_registration">Vehicle Registration</string>
    <string name="title_activity_edit_password">EditPassword</string>
    -->

    <string name="title_activity_registration2">Poll Watcher Registration</string>
    <string name="title_activity_registration3">Poll Watcher Registration</string>
    <string name="title_activity_registration4">Poll Watcher Registration</string>
    <string name="title_activity_dashboard">Poll Watcher Dashboard</string>
    <string name="title_activity_report_results">Report Election Results</string>
    <string name="title_activity_report_vote_buying">Report Vote Buying</string>
    <string name="title_activity_report_incident">Report Incident</string>
    <string name="helpText"><b>Go to Camera App:</b> 
        \n\tThis allows you to switch to the Camera App in a hurry, so that you can take videos of what\'s happening around you. This is important because the PollWatcher App cannot take videos, only pictures. 
        \n\tThe pictures you take using the Camera App cannot be uploaded to the PollWatcher server. This is to protect PollWatcher from doctored pictures.
        \n\n<b>Report Election Results:</b> \n\tThis is where you enter the election results of your poll center, and take a picture of it.
        \n\n<b>Report Vote Buying:</b> \n\tThis is where you report vote buying happening around you. Please write down the location where it happened, and which candidate was doing it, etc.
        \n\n<b>Report Other Incident:</b> \n\tThis is where you report other things happening around you. Please write down details and location where it happened
        \n\n<b>Upload Reports to Server:</b> \n\tClick this button to send your reports to the server. Please make sure you are connected to the internet. Your pictures will appear in your DCIM/Camera folder afterwards, so you can post them on facebook or other networking sites.</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>
