<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity" >
 	<ScrollView 
 	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		>
	 	<LinearLayout 
	 	    android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:orientation="vertical"
			>


    	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/fname" />
    	<EditText
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fname" />
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/mi" />
    	<EditText
            android:id="@+id/mi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:hint="@string/mi" />
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/lname" />
    	<EditText
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lname" />
	 	    	 	    
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/back" />
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next" />
    	<Button
            android:id="@+id/btnFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fill"
            android:text="Fill" />
    	</LinearLayout>
	</ScrollView>
     	    
</LinearLayout>
