<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/uname" />
    	<EditText
			android:id="@+id/uname"     	    
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uname" 
            android:editable="false"
            android:focusable="false"
            />
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/passwd" />
    	<EditText
            android:id="@+id/passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwd" 
			android:inputType="textPassword"
			android:text="asdfgh"
            />
    	<!-- 
	    <CheckBox
	        android:id="@+id/chkRememberMe"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rememberme" />
    	 -->
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login" />
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel" />
    		
</LinearLayout>
