<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
	<LinearLayout 
	    android:id="@+id/layoutShow" 
        android:orientation="vertical"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        >
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="edit"
		        android:text="@string/crud_edit" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="delete"
		        android:text="@string/crud_delete" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="back"
		        android:text="@string/crud_back" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="addNew"
		        android:text="@string/crud_add_new" />
	    </LinearLayout>
		<ScrollView
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    > 
		    <LinearLayout
		        android:orientation="vertical"
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        >
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Name:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblName"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			</LinearLayout>
		</ScrollView>
		    
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/layoutEdit" 
	    android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        >
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="save"
		        android:text="@string/crud_save" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="cancel"
		        android:text="@string/crud_cancel" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="saveAndAddNew"
		        android:text="@string/crud_save_and_add_new" />
	    </LinearLayout>
		<ScrollView
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    > 
		    <LinearLayout
		        android:orientation="vertical"
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        >
			    <TextView
			        android:id="@+id/errName"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Name:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtName"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Name"
			        android:imeOptions="actionDone"
			        />
		    </LinearLayout>
		</ScrollView> 
	</LinearLayout>
</LinearLayout>