<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity" >
 	<ScrollView 
 	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		>
	 	<LinearLayout 
	 	    android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:orientation="vertical"
			>
			
    	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/province" />
    	<EditText
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/province" 
            android:editable="false"
            android:focusable="false"
            />
    	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/city" />
    	<EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city" 
            android:editable="false"
            android:focusable="false"
            />
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/address" />
    	<EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/back" />
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"
            android:text="@string/submit" />
    	<Button
            android:id="@+id/btnFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fill"
            android:text="Fill" />
    	</LinearLayout>
	</ScrollView>
     	    
</LinearLayout>
