<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity" >
 	<ScrollView 
 	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		>
	 	<LinearLayout 
	 	    android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:orientation="vertical"
			>
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Cellphone No." />
    	<EditText
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="09176543210" />
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/passwd" />
    	<EditText
            android:id="@+id/passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwd" 
			android:inputType="textPassword"
            />
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/passwd2" />
    	<EditText
            android:id="@+id/passwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwd2" 
			android:inputType="textPassword"
            />
    		
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel" />
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next" />
   		<Button
            android:id="@+id/btnFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fill"
            android:text="Fill" />
    	</LinearLayout>
	</ScrollView>
     	    
</LinearLayout>
