<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity" >
 	<ScrollView 
 	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		>
	 	<LinearLayout 
	 	    android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:orientation="vertical"
			>
			
<!-- 
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/bday" />
    	<EditText
            android:id="@+id/bday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/bday" 
            android:editable="false"
            android:focusable="false"
            />
 -->
     	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/email" />
    	<EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="@string/email" />

    	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Region" />
    	<EditText
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Region" 
            android:editable="false"
            android:focusable="false"
            />
	
    		 	    
    	<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:text="@string/back" />
   		<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next" />
    	<!-- 
    	 -->
   			<Button
            android:id="@+id/btnFill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fill"
            android:text="Fill" />
    	</LinearLayout>
	</ScrollView>
     	    
</LinearLayout>
