<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
	<LinearLayout 
	    android:id="@+id/layoutShow" 
        android:orientation="vertical"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        >
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="edit"
		        android:text="@string/crud_edit" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="delete"
		        android:text="@string/crud_delete" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="back"
		        android:text="@string/crud_back" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="addNew"
		        android:text="@string/crud_add_new" />
	    </LinearLayout>
		<ScrollView
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    > 
		    <LinearLayout
		        android:orientation="vertical"
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        >
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Sf guard user ID:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblSfGuardUserId"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Datetime:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblDatetime"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Record type:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblRecordType"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Description:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblDescription"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Notes:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblNotes"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Filename:"
			        android:textStyle="italic"
			        />
		        <TextView
			        android:id="@+id/lblFilename"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        />
			</LinearLayout>
		</ScrollView>
		    
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/layoutEdit" 
	    android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        >
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="save"
		        android:text="@string/crud_save" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="cancel"
		        android:text="@string/crud_cancel" />
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="saveAndAddNew"
		        android:text="@string/crud_save_and_add_new" />
	    </LinearLayout>
		<ScrollView
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    > 
		    <LinearLayout
		        android:orientation="vertical"
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        >
			    <TextView
			        android:id="@+id/errSfGuardUserId"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Sf guard user ID:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtSfGuardUserId"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Sf guard user ID"
			        android:inputType="numberSigned"
			        android:imeOptions="actionDone"
			        />
			    <TextView
			        android:id="@+id/errDatetime"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Datetime:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtDatetime"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Datetime"
			        android:imeOptions="actionDone"
			        />
			    <TextView
			        android:id="@+id/errRecordType"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Record type:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtRecordType"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Record type"
			        android:imeOptions="actionDone"
			        />
			    <TextView
			        android:id="@+id/errDescription"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Description:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtDescription"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Description"
			        android:imeOptions="actionDone"
			        />
			    <TextView
			        android:id="@+id/errNotes"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Notes:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtNotes"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Notes"
			        android:imeOptions="actionDone"
			        />
			    <TextView
			        android:id="@+id/errFilename"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp"
			        android:text="Filename:"
			        android:textStyle="italic"
			        />
			    <EditText
			        android:id="@+id/txtFilename"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:hint="Filename"
			        android:imeOptions="actionDone"
			        />
		    </LinearLayout>
		</ScrollView> 
	</LinearLayout>
</LinearLayout>